--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.0.1",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.16.1"
   }
 }
